# hotline

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
hotline_bot/: __init__.py  config.py  google_services.py  handlers.py  keyboards.py  main.py  models.py  program.py  storage.py
scripts/: auth_google_drive.py
tests/: test_registration.py
