[project]
name = "hotline-registration-bot"
version = "0.1.0"
description = "Telegram registration bot for the Hotline rollerblading festival."
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.5,<4",
  "google-api-python-client>=2.120,<3",
  "google-auth>=2.28,<3",
  "google-auth-oauthlib>=1.2,<2",
  "pydantic-settings>=2.2,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
